course2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: handson
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: nginx
spec:
  ingressClassName: alb
  rules:
    - http:
        paths: 
        - path: /
          backend:
            service:
              name: nginx
              port:
                number: 80
          pathType: Prefix
